// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SkillTooltip - Scribing Skills Snapshots Shattering Knife (Player 1) should render Shattering Knife tooltip while loading scribing data: shattering-knife-loading-scribing-data 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-1uhcrne-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-bbbe4z-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-1so1mmd"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-1txov1d-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-eodq80-MuiTypography-root"
      >
        Scribing — Analyzing...
      </span>
    </div>
    <div
      class="MuiBox-root css-kxlf6x"
    >
      <div
        class="MuiStack-root css-1hyf038-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1nzo1ae"
        >
          <img
            alt="Shattering Knife"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_dualwield.png"
            style="width: 100%; height: 100%; display: block; object-fit: cover; border-radius: inherit;"
          />
        </div>
        <div
          class="MuiBox-root css-dj12vk"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-81b99o-MuiTypography-root"
          >
            Shattering Knife
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1r2f04i"
    >
      <div
        class="MuiBox-root css-1vonvk7"
      >
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Cost
          </span>
          <span
            class="MuiBox-root css-vowsqm"
          >
            3240 Stamina
          </span>
        </div>
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Target
          </span>
          <span
            class="MuiBox-root css-y079d7"
          >
            Enemy
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-dboyas-MuiTypography-root"
    >
      A scribing skill being analyzed...
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Scribing Skills Snapshots Shattering Knife (Player 1) should render Shattering Knife tooltip with complete scribing data: shattering-knife-complete-scribing-data 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-1uhcrne-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-bbbe4z-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-1so1mmd"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-1txov1d-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-eodq80-MuiTypography-root"
      >
        Scribing — Traveling Knife
      </span>
    </div>
    <div
      class="MuiBox-root css-kxlf6x"
    >
      <div
        class="MuiStack-root css-1hyf038-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1nzo1ae"
        >
          <img
            alt="Shattering Knife"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_dualwield.png"
            style="width: 100%; height: 100%; display: block; object-fit: cover; border-radius: inherit;"
          />
        </div>
        <div
          class="MuiBox-root css-dj12vk"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-81b99o-MuiTypography-root"
          >
            Shattering Knife
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1r2f04i"
    >
      <div
        class="MuiBox-root css-1vonvk7"
      >
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Cost
          </span>
          <span
            class="MuiBox-root css-vowsqm"
          >
            3240 Stamina
          </span>
        </div>
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Target
          </span>
          <span
            class="MuiBox-root css-y079d7"
          >
            Enemy
          </span>
        </div>
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Range
          </span>
          <span
            class="MuiBox-root css-y079d7"
          >
            15 meters
          </span>
        </div>
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Duration
          </span>
          <span
            class="MuiBox-root css-s7km8x"
          >
            Instant
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <div
      class="MuiBox-root css-1r2f04i"
    >
      <div
        class="MuiBox-root css-phtmgf"
      >
        <div
          class="MuiBox-root css-13jj6ny"
        />
        <span
          class="MuiTypography-root MuiTypography-caption css-16qcumd-MuiTypography-root"
        >
          Grimoire: 
          Traveling Knife
        </span>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1n0e06i-MuiTypography-root"
        >
          Focus Script
        </span>
        <div
          class="MuiBox-root css-1kejaih"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1b8syan-MuiTypography-root"
          >
            Shattering Knife
             (
            signature
            )
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1d2dt6l-MuiTypography-root"
        >
          Signature Script
        </span>
        <div
          class="MuiBox-root css-s3az8z"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1b8syan-MuiTypography-root"
          >
            Shattering Knife
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-1uwi21c-MuiTypography-root"
          >
            Evidence: 
            Ability ID 217340 found in database
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1n0e06i-MuiTypography-root"
        >
          Affix Scripts
        </span>
        <div
          class="MuiStack-root css-qepzwc-MuiStack-root"
        >
          <div
            class="MuiBox-root css-171onha"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-ldjl4n-MuiTypography-root"
            >
              Armor Breach
            </span>
            <span
              class="MuiTypography-root MuiTypography-caption css-1j8viat-MuiTypography-root"
            >
              (
              80
              %)
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-hkq2l3-MuiTypography-root"
        >
          Effects
        </span>
        <div
          class="MuiBox-root css-yi3mkw"
        >
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-1uh8cfg-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Shattering Knife (15)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-58x4p3-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Armor Reduction (8)
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-dboyas-MuiTypography-root"
    >
      Twirl and throw an enchanted dagger at an enemy, which returns to you after a short delay and hits additional enemies in the path. The dagger shatters on impact, reducing the target's armor and dealing additional damage over time.
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Scribing Skills Snapshots Shattering Knife (Player 1) should render Shattering Knife tooltip with minimal scribing data: shattering-knife-minimal-scribing-data 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-1uhcrne-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-bbbe4z-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-1so1mmd"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-1txov1d-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-eodq80-MuiTypography-root"
      >
        Scribing — Traveling Knife
      </span>
    </div>
    <div
      class="MuiBox-root css-kxlf6x"
    >
      <div
        class="MuiStack-root css-1hyf038-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1nzo1ae"
        >
          <img
            alt="Shattering Knife"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_dualwield.png"
            style="width: 100%; height: 100%; display: block; object-fit: cover; border-radius: inherit;"
          />
        </div>
        <div
          class="MuiBox-root css-dj12vk"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-81b99o-MuiTypography-root"
          >
            Shattering Knife
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1r2f04i"
    >
      <div
        class="MuiBox-root css-1vonvk7"
      >
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Cost
          </span>
          <span
            class="MuiBox-root css-vowsqm"
          >
            3240 Stamina
          </span>
        </div>
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Target
          </span>
          <span
            class="MuiBox-root css-y079d7"
          >
            Enemy
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <div
      class="MuiBox-root css-1r2f04i"
    >
      <div
        class="MuiBox-root css-phtmgf"
      >
        <div
          class="MuiBox-root css-13jj6ny"
        />
        <span
          class="MuiTypography-root MuiTypography-caption css-16qcumd-MuiTypography-root"
        >
          Grimoire: 
          Traveling Knife
        </span>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1n0e06i-MuiTypography-root"
        >
          Focus Script
        </span>
        <div
          class="MuiBox-root css-1kejaih"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1b8syan-MuiTypography-root"
          >
            Shattering Knife
             (
            signature
            )
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1d2dt6l-MuiTypography-root"
        >
          Signature Script
        </span>
        <div
          class="MuiBox-root css-s3az8z"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1b8syan-MuiTypography-root"
          >
            No signature script detected
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-hkq2l3-MuiTypography-root"
        >
          Effects
        </span>
        <div
          class="MuiBox-root css-yi3mkw"
        />
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-dboyas-MuiTypography-root"
    >
      A scribing skill that throws a shattering dagger at enemies.
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Scribing Skills Snapshots Shattering Knife (Player 1) should render Shattering Knife tooltip without scribing data (fallback): shattering-knife-no-scribing-data 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-1uhcrne-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-bbbe4z-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-1so1mmd"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-1txov1d-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-eodq80-MuiTypography-root"
      >
        Unknown — Unknown Grimoire
      </span>
    </div>
    <div
      class="MuiBox-root css-kxlf6x"
    >
      <div
        class="MuiStack-root css-1hyf038-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1nzo1ae"
        >
          <img
            alt="Shattering Knife"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_dualwield.png"
            style="width: 100%; height: 100%; display: block; object-fit: cover; border-radius: inherit;"
          />
        </div>
        <div
          class="MuiBox-root css-dj12vk"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-81b99o-MuiTypography-root"
          >
            Shattering Knife
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1r2f04i"
    >
      <div
        class="MuiBox-root css-1vonvk7"
      >
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Cost
          </span>
          <span
            class="MuiBox-root css-y079d7"
          >
            Unknown
          </span>
        </div>
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Target
          </span>
          <span
            class="MuiBox-root css-y079d7"
          >
            Enemy
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-dboyas-MuiTypography-root"
    >
      A mysterious skill with unknown scribing configuration.
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Scribing Skills Snapshots Shattering Knife - Various Effect Types should render with mixed effect types (damage, debuff, buff): shattering-knife-mixed-effects 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-1uhcrne-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-bbbe4z-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-1so1mmd"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-1txov1d-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-eodq80-MuiTypography-root"
      >
        Scribing — Traveling Knife
      </span>
    </div>
    <div
      class="MuiBox-root css-kxlf6x"
    >
      <div
        class="MuiStack-root css-1hyf038-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1nzo1ae"
        >
          <img
            alt="Shattering Knife"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_dualwield.png"
            style="width: 100%; height: 100%; display: block; object-fit: cover; border-radius: inherit;"
          />
        </div>
        <div
          class="MuiBox-root css-dj12vk"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-81b99o-MuiTypography-root"
          >
            Shattering Knife
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1r2f04i"
    >
      <div
        class="MuiBox-root css-1vonvk7"
      >
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Cost
          </span>
          <span
            class="MuiBox-root css-vowsqm"
          >
            3240 Stamina
          </span>
        </div>
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Target
          </span>
          <span
            class="MuiBox-root css-y079d7"
          >
            Enemy
          </span>
        </div>
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Range
          </span>
          <span
            class="MuiBox-root css-y079d7"
          >
            15 meters
          </span>
        </div>
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Effects
          </span>
          <span
            class="MuiBox-root css-y079d7"
          >
            4 Types
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <div
      class="MuiBox-root css-1r2f04i"
    >
      <div
        class="MuiBox-root css-phtmgf"
      >
        <div
          class="MuiBox-root css-13jj6ny"
        />
        <span
          class="MuiTypography-root MuiTypography-caption css-16qcumd-MuiTypography-root"
        >
          Grimoire: 
          Traveling Knife
        </span>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1n0e06i-MuiTypography-root"
        >
          Focus Script
        </span>
        <div
          class="MuiBox-root css-1kejaih"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1b8syan-MuiTypography-root"
          >
            Shattering Knife
             (
            signature
            )
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-1uwi21c-MuiTypography-root"
          >
            95
            % match confidence
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1d2dt6l-MuiTypography-root"
        >
          Signature Script
        </span>
        <div
          class="MuiBox-root css-s3az8z"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1b8syan-MuiTypography-root"
          >
            Shattering Knife
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-1uwi21c-MuiTypography-root"
          >
            Evidence: 
            Multiple damage instances, Armor reduction effects, Healing components
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-hkq2l3-MuiTypography-root"
        >
          Effects
        </span>
        <div
          class="MuiBox-root css-yi3mkw"
        >
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-1uh8cfg-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Shattering Strike (12)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-58x4p3-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Armor Shatter (8)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-1u245o6-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Combat Stance (5)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-frbrgp-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Life Steal (3)
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-dboyas-MuiTypography-root"
    >
      A complex scribing skill that damages, debuffs enemies, buffs the caster, and provides healing.
    </p>
  </div>
</div>
`;
